lookit/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lookit-app
  labels:
    app: lookit-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lookit-app
  template:
    serviceAccountName: lookit-sa
    metadata:
      labels:
        app: lookit-app
    spec:
      containers:
      - name: lookit-app-container
        # Replace with your Docker Hub image from the GitHub Action step
        image: branson404/django-app:3fefaaa3b13adb899938620d8a7d42e0affa5ebf
        ports:
        - containerPort: 8000
        # Resource limits prevent one pod from crashing the whole node
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
